Use Java 16's toList()